[build-system]
# This section tells build tools what is require to build your package
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
# Basic metadata
name = "machine-learning-project"
version = "0.1.0"
description = "A brief description of the awesome project"
readme = "README.md"
# You can point to a file or include inline text for your license.
license = {file = "LICENSE"}

# Author information
authors = [
    {name:Meeraj Ahmad, email:meeraj.ahmad06@gmail.com}
]

# Project dependencies
dependencies = [
    "requests>=2.25",
    "numpy>=1.20"
]

# Optional:URL links related to your project
[project.url]
Homepage = "https://example.com"
